--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Styles/global.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="Scripts/tailwind.config.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather App</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container mx-auto">
+      <div id="weather"></div>
+      <h1>وضعیت آب و هوا</h1>
+      <input
+        type="text"
+        id="cityInput"
+        placeholder=" نام شهر مورد نظر خود را وارد کنید"
+      />
+    </div>
+  </body>
 </html>
