--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
     <link rel="stylesheet" href="Styles/global.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="Scripts/tailwind.config.js"></script>
+    <script src="Scripts/custom.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Weather App</title>
+    <title>بررسی آب و هوا</title>
   </head>
   <body>
-    <div class="container mx-auto">
+    <div class="container mx-auto flex flex-col gap-2 p-4">
       <div id="weather"></div>
-      <h1>وضعیت آب و هوا</h1>
+      <h1 class="text-white">وضعیت آب و هوا</h1>
       <input
+        class="p-1 rounded"
         type="text"
         id="cityInput"
         placeholder=" نام شهر مورد نظر خود را وارد کنید"
       />
+      <button
+        id="weather"
+        onclick="getWeather()"
+        class="bg-red-400 text-md text-white rounded p-1"
+      >
+        دریافت اطلاعات
+      </button>
     </div>
   </body>
 </html>
