get Icons Dynamically & Load From Api

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container mx-auto flex flex-col gap-2 p-4">
-      <div id="weather"></div>
+
       <h1 class="text-white">وضعیت آب و هوا</h1>
       <input
         class="p-1 rounded"
@@ -33,6 +33,10 @@
       >
         دریافت اطلاعات
       </button>
+
+      <div id="weatherDetails" class="text-white text-xl text-end p-3 mt-8">
+
+      </div>
     </div>
   </body>
 </html>
