--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div
       class="sm:container md:flex md:flex-row flex flex-col h-96 items-center justify-center mx-auto gap-2 p-4 mt-12 overflow-"
     >
-      <div class="md:w-2/5 w-full p-8 mt-8">
+      <div class="md:w-2/5 w-full p-8 mt-10 bg-white/10 rounded">
         <h1 class="text-white">وضعیت آب و هوا</h1>
         <input
           class="w-full p-1 rounded my-4"
