--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Styles/global.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="Scripts/tailwind.config.js"></script>
-    <script src="Scripts/custom.js"></script>
+    <script src="Scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
